@@ -88,17 +88,10 @@ if (not $args->{PUREPERL_ONLY}) {
         if (eval { require Cpanel::JSON::XS; 1 } and not eval { Cpanel::JSON::XS->VERSION('2.3310'); 1 })
             or (not eval { require JSON::XS; 1; } and can_xs());
 
-    # avoid "JSON::XS::Boolean::* redefined" warnings caused by incompatibilities
-    # between JSON::XS 2.x and 3.0 --
+    # JSON::XS 3 changed its boolean handling - update it
     # if JSON::XS is installed and < 3.0
-    # and Cpanel::JSON::XS is (or is about to be) >= 3.0,
-    # then update JSON::XS to eliminate the incompatibility
     $WriteMakefileArgs{PREREQ_PM}{'JSON::XS'} = '3.00'
-        if eval { require JSON::XS; 1 } and not eval { JSON::XS->VERSION('3.0'); 1 }
-            and (eval { require Cpanel::JSON::XS; Cpanel::JSON::XS->VERSION('3.0'); 1 }
-                # we presume here that if we are installing Cpanel::JSON::XS, we
-                # are installing the latest version
-                or exists $WriteMakefileArgs{PREREQ_PM}{'Cpanel::JSON::XS'});
+        if eval { require JSON::XS; 1 } and not eval { JSON::XS->VERSION('3.0'); 1 };
 }
 
 $WriteMakefileArgs{MIN_PERL_VERSION} = delete $WriteMakefileArgs{PREREQ_PM}{perl} || 0;
