@@ -2,6 +2,8 @@ Revision history for JSON-MaybeXS
 
  - bump prereq on JSON::PP, to ensure we get the fix for parsing utf8-encoded
    values
+ - we now always upgrade JSON::XS if it is installed and below version 3.0,
+   due to changes in handling booleans
 
 1.003005 - 2015-03-22
  - fix x_contributors metadata that was killing metacpan (see
